fix: drag line over flow when in webiste running on iphone

--- a/src/assets/styles/components.css
+++ b/src/assets/styles/components.css
@@ -4,18 +4,37 @@
 
 .comparison-slider {
   width: 100%;
-  -webkit-appearance: none;
   background: none;
   outline: none;
   pointer-events: none;
+  -webkit-appearance: none;
 }
 
 .comparison-slider::-webkit-slider-thumb {
-  height: 800px;
   width: 20px;
   cursor: col-resize;
   pointer-events: auto;
   -webkit-appearance: none;
+}
+
+@media (max-width: 768px) {
+  .comparison-slider::-webkit-slider-thumb {
+    height: 360px;
+  }
+}
+
+/* Styles for screens between 769px and 1279px (inclusive) */
+@media (min-width: 769px) and (max-width: 1279px) {
+  .comparison-slider::-webkit-slider-thumb {
+    height: 570px;
+  }
+}
+
+/* Styles for screens 1280px and larger */
+@media (min-width: 1280px) {
+  .comparison-slider::-webkit-slider-thumb {
+    height: 750px;
+  }
 }
 
 .cd-line {
